Fixed Alignment

--- a/style.css
+++ b/style.css
@@ -20,29 +20,50 @@ h1{
 
 #left{
 	float: left;
-	width: 300px;
+	width: 30%;
 	border-style: solid;
 	border-color: yellow;
 	background-color: grey;
-	margin:0;
+
 }
 
 #right{
 	float: left;
-	width: 300px;
+	width: 30%;
 	border-style: solid;
 	border-color: red;
 	background-color: grey;
-	margin :0;
+	
 }
 
 #id{
 	float:left;
-	width: 200px;
-	margin:0;
+	width: 30%;
 	border-style: solid;
 	border-color: red;
 	background-color: green;
+
+
+}
+#id1{
+	float: left;
+	display: inline-block;
+	width: 30%;
+	border-style: solid;
+	border-color: red;
+	background-color: green;
+
+
+
+}
+#id2{
+	float:left;
+	width: 30%;
+	border-style: solid;
+	border-color: red;
+	background-color: green;
+	
+
 
 }
 
@@ -51,21 +72,25 @@ p{
 }
 
 #wrapper{
-	margin: auto;
-	width: 650px;
+	margin-right: 10%;
+	margin-left: 30%;
+	margin-top: 5%;
+	margin-bottom: 5%;
+	height: 100%;
+
 }
 #wrapper1{
-	width: 50%;
-	margin: auto;
+	margin-right: 10%;
+	margin-left: 10%;
+	margin-top: 5%;
+	margin-bottom: 5%;
+	height: 100%;
+
 }	
 
 #social{
 	display: inline;
 	position: fixed;
-}
-
-div{
-	
 }
 
 
@@ -82,40 +107,47 @@ h1{
 #g1{
 	background-image: url(https://i.ytimg.com/vi/wjmW7MW3WNE/maxresdefault.jpg);
 	float: left;
-	width: 500px;
-	height: 500px;
+	width: 50%;
 	background-repeat: none;
+	padding-bottom: 40%;
+	background-size: 100% 100%;
 }
 
 #g2{
 	background-color: skyblue;
 	background-image: url(http://hustleboss.com/wp-content/uploads/2015/06/11334635_1607367112870889_212986024_n-560x337.jpg);
 	float: left;
-	width: 500px;
-	height: 500px;
+	width: 50%;
 	background-repeat: none;
+	padding-bottom: 40%;
+	background-size: 100% 100%;
 }
 
 #g3{
 	background-image: url(http://sportsunbiased.com/wp-content/uploads/2015/05/cavs-warriors-e1433130492687.png);
 	float: left;
-	width: 500px;
-	height: 500px;
+	width: 50%;
 	background-repeat: none;
+	background-size: 100%;
+	padding-bottom: 40%;
+	background-size: 100% 100%;
 }
 
 
 #g4{
 	background-image: url(http://2.bp.blogspot.com/-UHfCccFMwV8/VWgJl8w3UbI/AAAAAAAAB9U/B4bPzUs9T8c/s1600/warriors-vs-cavaliers-2015-nba-finals.jpg);
 	float:left;
-	width: 500px;
-	height: 500px;
+	width: 50%;
 
 	background-repeat: none;
+	padding-bottom: 40%;
+	background-size: 100% 100%;
 }
 
 #center{
 	align-content: center;
+
+	padding-bottom: 
 }
 
 
